--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Home
       </div>
       <div class="tablet:grid-col-8 usa-prose">
         <h2 class="font-heading-xl margin-top-0 tablet:margin-bottom-0">
-          Med School for State Officers
+          Med school for state officers
         </h2>
         <p>When you get down to it, doctors just want you to be healthy.</p>
         <p>This course will help you develop tactics and strategies for getting your patients (states, vendors, and their projects) to come in for checkups more often, so you can help keep them healthy, on track, and delivering success.</p>
