edits on front page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Home
       </div>
       <div class="tablet:grid-col-8 usa-prose">
         <h2 class="font-heading-xl margin-top-0 tablet:margin-bottom-0">
-          A Materials Pilot
+          This is a materials pilot
         </h2>
         <p>These pages serve as a pilot for exploring project oversight while employing methods inspired by social learning theory. These pages do not represent policy or guidance from CMS.</p>
       </div>
