Remove banner, fix intro
Commented out the warning banner.

Rewrote intro page.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ title: Home
       </div>
       <div class="tablet:grid-col-8 usa-prose">
         <h2 class="font-heading-xl margin-top-0 tablet:margin-bottom-0">
-          This is a materials pilot
+          Welcome to <b>{{site.short}}</b>!
         </h2>
-        <p>These pages serve as a pilot for exploring project oversight while employing methods inspired by social learning theory. These pages do not represent policy or guidance from CMS.</p>
+        <p>This is a course for exploring project oversight and product ownership. You should dive into this learning with your colleagues, as the material is meant to be learned in discourse with others!</p>
       </div>
     </div>
   </section>
